--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^2.0.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "slackbots": "^1.0.2"
   }
