--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^2.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "node-schedule": "^1.2.0",
     "slackbots": "^1.0.2"
   }
 }
