--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "author": "Brian Gerson",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "dotenv": "^2.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "mongoose": "^4.7.6",
     "node-schedule": "^1.2.0",
+    "nodemon": "^1.11.0",
     "slackbots": "^1.0.2"
+  },
+  "devDependencies": {
+    "node-inspector": "^0.12.8"
   }
 }
