--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "dotenv": "^2.0.0",
+    "express": "^4.14.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.7.6",
     "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
+    "slack-node": "^0.1.8",
     "slackbots": "^1.0.2"
   },
   "devDependencies": {
