--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It counts down",
   "main": "lib/countdown.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": ""
   },
   "author": "Brian Gerson",
   "license": "ISC",
