--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "serve-static": "^1.11.1",
     "slack-node": "^0.1.8",
     "slackbots": "^1.0.2"
   },
