--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Brian Gerson",
   "license": "ISC",
   "dependencies": {
+    "@slack/events-api": "^1.0.1",
     "bluebird": "^3.5.0",
+    "body-parser": "^1.18.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
