--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^4.7.6",
     "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
