get first few rewrite commands working

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "body-parser": "^1.18.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.23",
     "mongoose": "^4.7.6",
     "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "ramda": "^0.26.1",
     "redis": "^2.8.0",
     "relax-js": "0.0.1",
     "serve-static": "^1.11.1",
