--- a/package.json
+++ b/package.json
@@ -2,31 +2,43 @@
   "name": "countdown-to-counttown",
   "version": "1.8.0",
   "description": "It counts down",
-  "main": "lib/countdown.js",
   "scripts": {
-    "start": "node bin/bot.js",
-    "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
-    "start-dev": "NODE_ENV=test_env node bin/bot.js"
+    "build": "babel src --out-dir dist",
+    "test": "jest --watch",
+    "start": "npm run build && node dist/index.js",
+    "start-local": "npm run build && NODE_ENV=test_env node dist/index.js"
   },
   "author": "Brian Gerson",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@slack/events-api": "^1.0.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.23",
     "mongoose": "^4.7.6",
     "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "ramda": "^0.26.1",
     "redis": "^2.8.0",
     "relax-js": "0.0.1",
     "serve-static": "^1.11.1",
     "slack-node": "^0.1.8",
     "slackbots": "^1.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "jest": "^24.8.0"
   }
 }
