--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "body-parser": "^1.18.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "lodash": "^4.17.11",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.23",
     "mongoose": "^4.7.6",
@@ -26,10 +25,8 @@
     "path": "^0.12.7",
     "ramda": "^0.26.1",
     "redis": "^2.8.0",
-    "relax-js": "0.0.1",
     "serve-static": "^1.11.1",
-    "slack-node": "^0.1.8",
-    "slackbots": "^1.0.2"
+    "slack-node": "^0.1.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
