--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
     "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@slack/events-api": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "moment-business-days": "^1.1.3",
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.4",
     "node-schedule": "^1.3.2",
